Drivers: dimensions.x is always invalid, but dimensions[0] works #42258

Closed
opened 2014-10-16 15:52:15 +02:00 by Mikhail Rachinskiy · 11 comments

System Information
Windows 8.1 x64
Renderer: GeForce GTX 860M/PCIe/SSE2
Vendor: NVIDIA Corporation
Version: 4.4.0

Blender Version
Broken: 2.72.1 4d4da31

Short description of error
Cant use driver variable with Dimensions property, while Scale property is working.

Exact steps for others to reproduce the error
Open blend file driver_dim.blend and look for the driver variables.
bpy.context.active_object.dimesions.x is working just fine in console.

**System Information** Windows 8.1 x64 Renderer: GeForce GTX 860M/PCIe/SSE2 Vendor: NVIDIA Corporation Version: 4.4.0 **Blender Version** Broken: 2.72.1 4d4da31 **Short description of error** Cant use driver variable with Dimensions property, while Scale property is working. **Exact steps for others to reproduce the error** Open blend file [driver_dim.blend](https://archive.blender.org/developer/F117695/driver_dim.blend) and look for the driver variables. bpy.context.active_object.dimesions.x is working just fine in console.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy

Added subscriber: @mont29

Added subscriber: @mont29

Yeah, this is a know issue with dimensions… will merge with another report (not the same issue on first look, but actually has the same causes). Thanks for the report anyway.

Yeah, this is a know issue with dimensions… will merge with another report (not the same issue on first look, but actually has the same causes). Thanks for the report anyway.

Hmm, no actually, it’s something different here.

First of all, you are controlling dim using it as parameter, this will never work in any case (dependency cycle).

However, there is something else here, rather strange - dimensions.x is always invalid, but dimensions- [x] does work, that’s not normal I think.

Hmm, no actually, it’s something different here. First of all, you are controlling dim using it as parameter, this will never work in any case (dependency cycle). However, there is something else here, rather strange - `dimensions.x` is always invalid, but `dimensions- [x]` does work, that’s not normal I think.
Bastien Montagne changed title from Cant use driver variable with Dimensions property to Drivers: `dimensions.x` is always invalid, but `dimensions[0]` works 2014-10-16 16:06:05 +02:00

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Bastien Montagne self-assigned this 2014-10-16 16:30:40 +02:00

Found the glitch, fix incoming.

Found the glitch, fix incoming.

This issue was referenced by d30abdf3ec

This issue was referenced by d30abdf3ec28b8e66c86cd37138efc2270375596

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d30abdf3ec.

Closed by commit d30abdf3ec.

This issue was referenced by 6a44865d2e

This issue was referenced by 6a44865d2e46cb74b3ed4399137ce66bb84e3e90
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42258
No description provided.