Fix T42258: Drivers: `dimensions.x` is always invalid, but `dimensions[0]` works

'PROP_XYZ_LENGTH' subtype was missing from list of valid '.x/y/z/w' ones.